# cc-youtube-sub

./: .gitattributes  .gitignore  CLAUDE.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.github/workflows/: release.yml
docs/: design-system.md  poc.md  prd.md  tech-stack.md  test-strategy.md  wsl2-dev-constraints.md
docs/phases/: overview.md  phase-0-tauri-skeleton.md  phase-1-subtitle-pipeline.md  phase-2-integration-cache.md  phase-3-buffering-polish.md  phase-3-finishing.md
e2e/: translation-flow.e2e.ts
src/: index.css  main.tsx  router.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: e2e_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  buffer_manager.rs  cache.rs  error.rs  lib.rs  main.rs
src-tauri/src/claude/: adapter.rs
src-tauri/src/codex/: adapter.rs
src-tauri/src/subtitle/: chunk.rs  fetch.rs  mod.rs  parser.rs
src-tauri/src/translate/: codex_event_parser.rs  jsonl_parser.rs  mod.rs  prompt.rs  validator.rs
src/components/: backend-selector.tsx  error-modal.tsx  history-card.test.tsx  history-card.tsx  history-grid.test.tsx  history-grid.tsx  model-selector.tsx  progress-bar.tsx  subtitle-overlay.tsx  update-banner.tsx  url-input.tsx  youtube-player.tsx
src/hooks/: use-buffer-manager.ts  use-fullscreen.ts  use-keyboard-shortcuts.ts  use-translation-pipeline.test.tsx  use-translation-pipeline.ts
src/lib/: mock-tauri.ts  (+7 more)
(+21 files in other folders)
