[package]
name = "cc-youtube-sub"
version = "0.1.0"
edition = "2021"

[lib]
name = "youtube_subtitle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
yt-transcript-rs = "0.1"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
sha2 = "0.10"
